# episurv

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  r-parity.yml  test.yml
docs/: api.md  changelog.md  index.md
src/episurv/: __init__.py
src/episurv/data/: __init__.py  incidence.py  serial_interval.py
src/episurv/rt/: __init__.py  instant.py
tests/: __init__.py  test_episurv.py
